03-app-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: app-deployment
  metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80

          - path: /api/node(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-node-service
                port:
                  number: 3000

          - path: /api/go(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: api-golang-service
                port:
                  number: 8000
